--- a/hotels.html
+++ b/hotels.html
@@ -1,260 +1,215 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Лучшие отели • Южный Берег Иссык-Куля • 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
-  <!-- Swiper CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{
-      font-family:'Inter',sans-serif;
-      background:#f0f8ff;
-      color:#003366;
-      min-height:100vh;
-      padding-top:80px;
-    }
-    body::before{
-      content:""; position:fixed; inset:0;
-      background:linear-gradient(to bottom,rgba(240,248,255,0.9),rgba(224,255,255,0.8)),
-      url('https://c8.alamy.com/comp/PT3PMT/beautiful-southern-shore-of-lake-issyk-kul-in-the-summer-day-kyrgyzstan-PT3PMT.jpg') center/cover no-repeat;
-      z-index:-1;
-    }
-    .back-btn{
-      position:fixed;
-      top:20px;
-      left:20px;
-      z-index:999;
-      background:#00d4ff;
-      color:#fff;
-      padding:12px 24px;
-      border-radius:50px;
-      font-weight:600;
-      font-size:1rem;
-      text-decoration:none;
-      box-shadow:0 4px 15px rgba(0,212,255,0.4);
-      transition:all .3s;
-    }
-    .back-btn:hover{
-      background:#ff8c00;
-      transform:scale(1.05);
-      box-shadow:0 8px 25px rgba(255,140,0,0.4);
-    }
-    .back-btn::before{content:"← ";font-size:1.3em}
-    header{
-      text-align:center;
-      padding:60px 20px 40px;
-    }
-    h1{
-      font-size:clamp(3rem,10vw,6rem);
-      color:#ff8c00;
-      text-shadow:0 4px 20px rgba(255,215,0,0.6);
-      margin-bottom:20px;
-    }
-    .container{
-      max-width:1400px;
-      margin:0 auto;
-      padding:40px 20px 80px;
-    }
-    h2{
-      text-align:center;
-      color:#006666;
-      font-size:3rem;
-      margin-bottom:60px;
-    }
-    .grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
-      gap:40px;
-    }
-    .hotel-card{
-      background:rgba(255,255,255,0.85);
-      backdrop-filter:blur(16px);
-      border:1px solid rgba(0,212,255,0.6);
-      border-radius:28px;
-      overflow:hidden;
-      box-shadow:0 15px 40px rgba(0,0,0,0.2);
-      transition:.4s;
-      display:flex;
-      flex-direction:column;
-    }
-    .hotel-card:hover{transform:translateY(-12px)}
-    .swiper{height:460px}
-    .swiper-slide img{width:100%;height:100%;object-fit:cover}
-    .info{
-      padding:28px;
-      text-align:center;
-      flex-grow:1;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-    }
-    .info h3{
-      font-size:1.55rem;
-      color:#006666;
-      margin-bottom:12px;
-    }
-    .info p{
-      font-size:1.1rem;
-      line-height:1.6;
-      margin-bottom:16px;
-      color:#003366;
-    }
-    .price{
-      display:inline-block;
-      background:#ff8c00;
-      color:#fff;
-      font-weight:900;
-      padding:8px 20px;
-      border-radius:30px;
-      font-size:1.1rem;
-      margin-bottom:20px;
-    }
-    .btn{
-      display:inline-block;
-      background:linear-gradient(135deg,#00d4ff,#22d3ee);
-      color:#fff;
-      font-weight:700;
-      padding:14px 32px;
-      border-radius:50px;
-      text-decoration:none;
-      font-size:1.1rem;
-      box-shadow:0 8px 25px rgba(0,212,255,0.4);
-      transition:.3s;
-    }
-    .btn:hover{background:#ff8c00;transform:scale(1.08)}
-    footer{
-      text-align:center;
-      padding:60px 20px;
-      background:#e0ffff;
-      color:#006666;
-      font-size:0.95rem;
-    }
-    @media(max-width:768px){
-      .grid{grid-template-columns:1fr}
-      .swiper{height:360px}
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Ton Marina Apart-Hotel — Южный берег Иссык-Куля | Бронирование 2025</title>
+
+<meta name="description" content="Ton Marina Apart-Hotel в селе Тон — апартаменты с видом на Иссык-Куль, собственный пирс, пляж, Wi-Fi. Бронирование напрямую без посредников.">
+<meta name="keywords" content="Ton Marina Apart-Hotel, отели Иссык-Куль, село Тон, апартаменты Иссык-Куль, южный берег">
+
+<link rel="canonical" href="https://issykkul-kg.github.io/TravelKyrgyzstan/ton-marina.html">
+
+<!-- Open Graph -->
+<meta property="og:title" content="Ton Marina Apart-Hotel • Иссык-Куль">
+<meta property="og:description" content="Современный апарт-отель на первой линии Иссык-Куля. Собственный пирс и пляж.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="images/ton-marina/Ton-Marina-1.jpg">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:Inter,sans-serif;
+  background:#f0f8ff;
+  color:#003366;
+  line-height:1.6;
+}
+header{
+  background:linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),
+  url('images/ton-marina/Ton-Marina-1.jpg') center/cover;
+  color:#fff;
+  padding:120px 20px;
+  text-align:center;
+}
+header h1{
+  font-size:clamp(2.5rem,6vw,4.5rem);
+  margin-bottom:15px;
+}
+header p{
+  font-size:1.2rem;
+  max-width:800px;
+  margin:auto;
+}
+.back{
+  position:absolute;
+  top:20px;
+  left:20px;
+  background:#00d4ff;
+  color:#fff;
+  padding:10px 20px;
+  border-radius:40px;
+  text-decoration:none;
+  font-weight:600;
+}
+.container{
+  max-width:1200px;
+  margin:auto;
+  padding:60px 20px;
+}
+.section{
+  margin-bottom:70px;
+}
+.section h2{
+  text-align:center;
+  color:#ff8c00;
+  font-size:2.6rem;
+  margin-bottom:30px;
+}
+.swiper{
+  height:520px;
+  border-radius:30px;
+  overflow:hidden;
+}
+.swiper img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+.info{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:40px;
+}
+.card{
+  background:#fff;
+  border-radius:25px;
+  padding:35px;
+  box-shadow:0 15px 40px rgba(0,0,0,.15);
+}
+.price{
+  background:#ff8c00;
+  color:#fff;
+  font-size:1.2rem;
+  font-weight:800;
+  padding:12px 24px;
+  border-radius:40px;
+  display:inline-block;
+  margin:20px 0;
+}
+.btn{
+  display:inline-block;
+  padding:15px 35px;
+  background:#00d4ff;
+  color:#fff;
+  font-weight:700;
+  border-radius:50px;
+  text-decoration:none;
+}
+.btn:hover{background:#ff8c00}
+.map iframe{
+  width:100%;
+  height:400px;
+  border-radius:25px;
+  border:0;
+}
+footer{
+  background:#e0ffff;
+  text-align:center;
+  padding:40px 20px;
+  color:#006666;
+}
+@media(max-width:900px){
+  .info{grid-template-columns:1fr}
+  .swiper{height:360px}
+}
+</style>
+
+<!-- Schema.org -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Hotel",
+  "name": "Ton Marina Apart-Hotel",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Тон",
+    "addressRegion": "Иссык-Кульская область",
+    "addressCountry": "KG"
+  },
+  "telephone": "+996709100020",
+  "priceRange": "8000–20000 KGS",
+  "url": "https://issykkul-kg.github.io/TravelKyrgyzstan/ton-marina.html"
+}
+</script>
+
 </head>
 <body>
-<a href="index.html" class="back-btn">На главную</a>
+
+<a href="index.html" class="back">← Назад</a>
+
 <header>
-  <h1>ОТЕЛИ</h1>
+<h1>Ton Marina Apart-Hotel</h1>
+<p>Премиальные апартаменты на первой линии Иссык-Куля • Собственный пирс • Пляж • Панорамные виды</p>
 </header>
+
 <div class="container">
-  <h2>Лучшие отели и апартаменты южного берега 2025</h2>
-  <div class="grid">
 
-    <!-- Ton Marina Apart-Hotel с 28 фото -->
-    <div class="hotel-card">
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina 1" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-2.jpg" alt="Ton Marina 2" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-3.jpg" alt="Ton Marina 3" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-4.jpg" alt="Ton Marina 4" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-5.jpg" alt="Ton Marina 5" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-6.jpg" alt="Ton Marina 6" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-7.jpg" alt="Ton Marina 7" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-8.jpg" alt="Ton Marina 8" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-9.jpg" alt="Ton Marina 9" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-10.jpg" alt="Ton Marina 10" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-11.jpg" alt="Ton Marina 11" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-12.jpg" alt="Ton Marina 12" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-13.jpg" alt="Ton Marina 13" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-14.jpg" alt="Ton Marina 14" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-15.jpg" alt="Ton Marina 15" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-16.jpg" alt="Ton Marina 16" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-17.jpg" alt="Ton Marina 17" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-18.jpg" alt="Ton Marina 18" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-19.jpg" alt="Ton Marina 19" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-20.jpg" alt="Ton Marina 20" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-21.jpg" alt="Ton Marina 21" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-22.jpg" alt="Ton Marina 22" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-23.jpg" alt="Ton Marina 23" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-24.jpg" alt="Ton Marina 24" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-25.jpg" alt="Ton Marina 25" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-26.jpg" alt="Ton Marina 26" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-27.jpg" alt="Ton Marina 27" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-28.jpg" alt="Ton Marina 28" loading="lazy"></div>
-        </div>
-        <div class="swiper-pagination"></div>
-      </div>
-      <div class="info">
-        <h3>Ton Marina Apart-Hotel</h3>
-        <p>Село Тон • Современные апартаменты с кухней и балконами<br>Собственный пирс и пляж • Прямой вид на Иссык-Куль • Wi-Fi</p>
-        <div class="price">от 8000 до 20000 сом / ночь</div>
-        <a href="https://wa.me/996709100020?text=Здравствуйте! Хочу забронировать номер в Ton Marina" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-
-    <!-- Остальные отели (оставил как было, но можно заменить фото на свои) -->
-    <div class="hotel-card">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/69/46/bel-tam-seaside-yurt.jpg?w=900&h=500&s=1" alt="Tong Marina Apart-Hotel">
-      <div class="info">
-        <h3>Tong Marina Apart-Hotel</h3>
-        <p>Современные апартаменты • Первая линия • Бассейн • Вид на озеро</p>
-        <div class="price">от 15 000 сом / ночь</div>
-        <a href="https://wa.me/996700123456" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-    <div class="hotel-card">
-      <img src="https://c8.alamy.com/comp/2AGAC62/lake-issyk-kul-kyrgyzstan-empty-sandy-beach-on-the-southern-shore-of-the-lake-2AGAC62.jpg" alt="Elestet Issyk-Kul">
-      <div class="info">
-        <h3>Elestet Issyk-Kul</h3>
-        <p>Комфортабельный отель • Приватный пляж • Ресторан • Горы</p>
-        <div class="price">от 12 000 сом / ночь</div>
-        <a href="https://wa.me/996555987654" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-    <div class="hotel-card">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam Seaside Yurt Camp">
-      <div class="info">
-        <h3>Bel Tam Seaside Yurt Camp</h3>
-        <p>Юрточный лагерь • Прямо на пляже • Аутентично • Закаты</p>
-        <div class="price">от 8 000 сом / ночь</div>
-        <a href="https://wa.me/996709100020" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-    <div class="hotel-card">
-      <img src="https://c8.alamy.com/comp/PT3PMT/beautiful-southern-shore-of-lake-issyk-kul-in-the-summer-day-kyrgyzstan-PT3PMT.jpg" alt="Apricot Guest House">
-      <div class="info">
-        <h3>Apricot Guest House</h3>
-        <p>Уютный гостевой дом • Семейный • Близко к Боконбаево</p>
-        <div class="price">от 6 000 сом / ночь</div>
-        <a href="https://wa.me/996702703456" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-    <div class="hotel-card">
-      <img src="https://www.shutterstock.com/image-photo/beautiful-southern-shore-lake-issykkul-260nw-496493437.jpg" alt="Almaluu Yurt Camp">
-      <div class="info">
-        <h3>Almaluu Yurt Camp</h3>
-        <p>Традиционные юрты • Природа • Конные прогулки</p>
-        <div class="price">от 7 500 сом / ночь</div>
-        <a href="https://wa.me/996777123456" class="btn">Забронировать в WhatsApp</a>
-      </div>
-    </div>
-
+<section class="section">
+<div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-1.jpg"></div>
+    <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-2.jpg"></div>
+    <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-3.jpg"></div>
+    <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-4.jpg"></div>
   </div>
+  <div class="swiper-pagination"></div>
 </div>
+</section>
+
+<section class="section info">
+<div class="card">
+<h2>Об отеле</h2>
+<p>
+Ton Marina Apart-Hotel расположен в селе Тон на южном берегу Иссык-Куля.
+Современные апартаменты с кухней и балконами, прямой выход к озеру,
+собственный пирс, чистый пляж, Wi-Fi и парковка.
+</p>
+<div class="price">от 8 000 до 20 000 сом / ночь</div><br>
+<a class="btn" href="https://wa.me/996709100020">Забронировать в WhatsApp</a>
+</div>
+
+<div class="card map">
+<h2>Расположение</h2>
+
+<!-- Google Map -->
+<iframe src="https://www.google.com/maps?q=Ton%20Marina%20Apart%20Hotel&output=embed"></iframe>
+
+<br><br>
+
+<!-- Yandex Map -->
+<iframe src="https://yandex.ru/map-widget/v1/?text=Ton%20Marina%20Apart%20Hotel"></iframe>
+</div>
+</section>
+
+</div>
+
 <footer>
-  © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности<br>
-  +996 709 100 020 · +996 702 703 456
+© 2025 Ton Marina Apart-Hotel · Южный берег Иссык-Куля<br>
++996 709 100 020
 </footer>
 
-<!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
-  document.querySelectorAll('.mySwiper').forEach(swiper => {
-    new Swiper(swiper, {
-      loop: true,
-      autoplay: { delay: 4000 },
-      pagination: { el: '.swiper-pagination', clickable: true },
-      grabCursor: true
-    });
-  });
+new Swiper('.mySwiper',{
+  loop:true,
+  autoplay:{delay:4000},
+  pagination:{el:'.swiper-pagination',clickable:true}
+});
 </script>
+
 </body>
 </html>
